# GameOfLife---Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
include/: engine.hpp  view.hpp
src/: engine.cpp  main.cpp  view.cpp
